--- a/Galleriet/Galleriet/Galleriet.csproj
+++ b/Galleriet/Galleriet/Galleriet.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Gallery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
