--- a/Galleriet/Galleriet/Galleriet.csproj
+++ b/Galleriet/Galleriet/Galleriet.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Gallery.cs" />
+    <Compile Include="LinkData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
