--- a/Galleriet/Galleriet/Web.config
+++ b/Galleriet/Galleriet/Web.config
@@ -10,6 +10,13 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
+  <location path="images">
+    <system.web>
+      <authorization>
+        <allow  users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
