--- a/Galleriet/Galleriet/Web.config
+++ b/Galleriet/Galleriet/Web.config
@@ -9,6 +9,9 @@
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
+      <authorization>
+        <allow  users="*"/>
+      </authorization>
     </system.web>
   <location path="images">
     <system.web>
